<resources>
    <string name="app_name">Loja M2</string>

    <!-- Login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_name">Nome</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">E-mail inválido</string>
    <string name="invalid_password">Senha deve ter mais de 5 caracteres</string>
    <string name="invalid_name">Nome inválido</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Product List -->
    <string name="speakable_add_product">Adicionar produto</string>
    <string name="speakable_logout">Logout</string>

    <!-- Form product -->
    <string name="form_app_bar_name_create">Cadastro de produto</string>
    <string name="form_app_bar_name_edit">Editar produto</string>
    <string name="tx_view_title">Título:</string>
    <string name="tx_view_description">Descrição:</string>
    <string name="tx_view_value">Valor:</string>
    <string name="tx_view_created_at">Data de cadastro:</string>
    <string name="tx_view_updated_at">Data de saída:</string>
    <string name="tx_view_stocked">Em estoque</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_delete">Excluir</string>
</resources>